Bug: 72290 IE : Blank panel and unwanted scrollbar appeared due to content wrapping issue add relative positioning and width to div class=info to deal with IE issue with overflow hidden.  Set word-wrap: break-all for message body
http://bugzilla.zimbra.com/show_bug.cgi?id=72290

Copied from Perforce
 Change: 370778

--- a/WebRoot/css/msgview.css
+++ b/WebRoot/css/msgview.css
@@ -34,6 +34,8 @@
 	@MailMsgBodyText@
 	@MailMsgBodyText-fixed@
 	@FontSize-html@
+    word-wrap: break-word;
+
 }
 
 .MsgBody-text, .MsgBody-html {
